# kodama_server

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_protobuf.sh  config.json_backup  kodama_msg.proto  kodama_server  old_build.sh
CVSensorSimulator/src/: CVSensorSimulator.cpp  PoseDetector.cpp
for_python_client/: kodama_msg_pb2.py
src/: Angles.h  PoseDetector.cpp  Robot.cpp  Robot.h  _CVSensorSimulator.cpp  kodama_msg.pb.cc  kodama_msg.pb.h  kodama_server.cpp
